# ollama-rename-img

./: README.md  pyproject.toml
ollama_rename_img/: main.py
